--- a/thugh/templates/thugh/index.html
+++ b/thugh/templates/thugh/index.html
@@ -1,67 +1,5 @@
-<!DOCTYPE html>
-<!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-
-   <!--- basic page needs
-   ================================================== -->
-   <meta charset="utf-8">
-	<title>Nima Karimi | Personal page</title>
-	<meta name="description" content="Nima Karimi">
-	<meta name="author" content="Nim4 Karimi ,">
-
-   <!-- mobile specific metas
-   ================================================== -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
- 	<!-- CSS
-   ================================================== -->
-   <link rel="stylesheet" href="css/base.css">
-   <link rel="stylesheet" href="css/main.css">
-   <link rel="stylesheet" href="css/vendor.css">
-   <link rel="stylesheet" href="css/style.css">
-
-   <!-- script
-   ================================================== -->
-	<script src="js/modernizr.js"></script>
-	<script src="js/pace.min.js"></script>
-
-   <!-- favicons
-	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.ico">
-
-</head>
-
-<body id="top">
-
-	<!-- header
-   ================================================== -->
-   <header>
-   	<div class="row">
-
-   		<div class="top-bar">
-   			<a class="menu-toggle" href="#"><span>Menu</span></a>
-
-	   		<div class="logo">
-		         <a href="index.html">Menu</a>
-		      </div>
-
-		   	<nav id="main-nav-wrap">
-					<ul class="main-navigation">
-						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
-						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
-						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
-						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
-						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>
-						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>
-					</ul>
-				</nav>
-   		</div> <!-- /top-bar -->
-
-   	</div> <!-- /row -->
-   </header> <!-- /header -->
-
+{% extends 'thugh/base.html' %}
+{% block content %}
 	<!-- intro section
    ================================================== -->
    <section id="intro">
@@ -956,46 +894,5 @@ Features: Large-Scale Distributed Systems, Microservices Architectures, Cloud-Na
 
 	</section> <!-- /contact -->
 
+{% endblock %}
 
-   <!-- footer
-   ================================================== -->
-
-   <footer>
-     	<div class="row">
-
-     		<div class="col-six tab-full pull-right social">
-
-     			<ul class="footer-social">
-			      <li><a href="http://facebook.com/K4rimi"><i class="fa fa-facebook"></i></a></li>
-			      <li><a href="https://www.instagram.com/nim4/"><i class="fa fa-instagram"></i></a></li>
-			   </ul>
-
-	      </div>
-
-      	<div class="col-six tab-full">
-	      	<div class="copyright">
-		        	<span>© Copyright Nima Karimi 2010-2018.</span>
-		        	<span>Design by <a href="http://www.nim4.ir/">Nim4</a></span>
-		         </div>
-	      	</div>
-
-	      	<div id="go-top">
-		         <a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
-		      </div>
-
-      	</div> <!-- /row -->
-   </footer>
-
-   <div id="preloader">
-    	<div id="loader"></div>
-   </div>
-
-   <!-- Java Script
-   ================================================== -->
-   <script src="js/jquery-2.1.3.min.js"></script>
-   <script src="js/plugins.js"></script>
-   <script src="js/main.js"></script>
-
-</body>
-
-</html>
